[gd_scene load_steps=2 format=3 uid="uid://cj54wjq3kdj2n"]

[ext_resource type="Script" uid="uid://dfcrajqkscpso" path="res://scripts/main_menu/panels/CalendarPanel.gd" id="1"]

[node name="CalendarPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Root" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Root"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="MonthLabel" type="Label" parent="Root/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Month YYYY"

[node name="Spacer" type="Control" parent="Root/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PrevBtn" type="Button" parent="Root/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "◀"

[node name="TodayBtn" type="Button" parent="Root/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Today"

[node name="NextBtn" type="Button" parent="Root/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "▶"

[node name="Grid" type="GridContainer" parent="Root"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 7
